2008-08-24  Sebastien Pouliot  <sebastien@ximian.com>

	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Override Initialize
	to be able to detect both Process and Ping. Turn off the rule is both
	are not used in a module, otherwise just look for the one(s) present.

2008-08-11  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs: Fix case where we can't resolve the
	method on which we want to check a parameter name.

2008-08-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs: Remove unused parameters (self-test)

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ExitCodeIsLimitedOnUnixRule.cs: Remove unused field (self-test)

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs: Fix unused 'msg' (last minute change)
	and static-ify some methods (self-test).

2008-07-10  Daniel Abramov  <ex@vingrad.ru>

	* DoNotHardcodePathsRule.cs: New rule that looks for hardcoded 
	path strings like 'C:\something.txt' or '/usr/home' and warns the
	developer that they may break application portability.
	* Makefile.am, 
	* Gendarme.Rules.Portability.mdp,
	* Gendarme.Rules.Portability.csproj: Add new rule.

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make

2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Simplify logic a
	bit. Handle the case where Resolve returns null (cannot find the 
	required assemblies)
	* MonoCompatibilityReviewRule.cs: Dispose as soon as possible.
	* Makefile.am: Rebuild if the framework has changed.

2008-05-27  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: Whine at the right stream 
	(self-test).

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* ExitCodeIsLimitedOnUnixRule.cs: Simplify Initialize (using rocks).
	Don't report a defect if we call a method that returns a byte (since
	we're sure it's value is ok).
